# Pixel-Platform

./: .env.sample  .gitignore  pyproject.toml  ssh_server.py  ssh_tui.py  ui.layout  utils.py
